# turn-formal

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  Trunk.toml  build.sh  dev.sh  export_all_theories.sh  index.html  math_content_flow_summary.md  mod.rs  test_group.rs
.cargo/: config.toml
.cursor/rules/: MCP.md  general.md  proof.md  react.md  rust.md
bindings/: AddOrSubOperatorNode.ts  AnimationData.ts  AnimationState.ts  DomainReference.ts  GroupDefinition.ts  GroupElement.ts  GroupHomomorphism.ts  MathModule.ts  MathNode.ts  MathNodeContent.ts  MathObjectMetadata.ts  MulSymbol.ts  Proof.ts  ProofStep.ts  ReferenceType.ts  RefinedMulOrDivOperation.ts  SpecialMiddleScriptNode.ts
doc/: advantage.md  why create a new math proof language.md
doc/brainstorm/: architecture_summary.md  why create a new math proof language.md
doc/turn_definition_language/: appendix_isabelle_comparison.typ  tdl_specification_typst.typ
docs/: tactics_implementation.md
foundational_theories/: mod.rs
foundational_theories/category_theory/: collect.rs  definitions.rs  mod.rs
foundational_theories/type_theory/: mod.rs
foundational_theories/type_theory_old/: mod.rs
foundational_theories/type_theory_v2/: mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: group_theory.definitions.json  group_theory.overview.json  group_theory.theorems.json  manifest.json  probability_theory.definitions.json  probability_theory.overview.json  probability_theory.theorems.json  test-links.html
frontend/src/: App.module.css  App.module.scss  App.tsx  main.tsx  test-math-rendering.tsx  vite-env.d.ts
goals/: mod.rs
leptos/: README.md  app.rs  lib.rs  main.rs  mod.rs  styles.css
leptos/adapters/: theorem_adapter.rs
leptos/components/: content_viewer.rs  definition.rs  mod.rs  navigation.rs  repository_layout.rs  repository_reader.rs  sidebar.rs  theorem.rs  theorem_adapter.rs  theorem_proof.rs  theory.rs  visualization.rs
leptos/pages/: about_page.rs  definition_page.rs  home_page.rs  math_theorem_page.rs  mod.rs  (+3 more)
path_index_derive/: Cargo.toml
register-macros/: Cargo.toml
scripts/: content_compiler.rs  convert_theorems.sh
subjects/: mod.rs
tactics/: mod.rs  new_replacement_strategy.rs  replacement_strategy.rs
typst/: bibliography.bib  build.sh  common.typ  paper.typ  paper.typ.bak  paper.typ.new  presentation.typ
visualization/: Trunk.toml  dev.sh  index.html  mod.rs  styles.css  wasm.rs
(+533 files in other folders)
