[package]
name = "turn-formal"
version = "0.1.0"
edition = "2024"
description = "A unified visualization tool for formal mathematics, logic, and foundational theories"

[lib]
name = "turn_formal"
path = "mod.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "leptos_app"
path = "leptos/main.rs"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
thiserror = "2.0.12"
console_error_panic_hook = "0.1.7"
