[package]
name = "turn-formal"
version = "0.1.0"
edition = "2024"
description = "A unified visualization tool for formal mathematics, logic, and foundational theories"

[lib]
name = "turn_formal"
path = "mod.rs"
crate-type = ["rlib"]

[dependencies]
# leptos = { version = "0.7.8", features = ["csr"] }
# leptos_router = "0.7.8"
# leptos_meta = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
thiserror = "2.0.12"
log = "0.4.20"
# wasm-logger = "0.2.0"
# simple_logger = "4.2.0"
# js-sys = "0.3.64"
# crabtime = "1.1.3"
ts-rs = { version = "10.1.0", features = ["format"] }
# chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.79"
lazy_static = "1.5.0"
uuid = { version = "1.16.0", features = ["v4"] }
